@@ -17,5 +17,18 @@
             definitionId="org.eclipse.linuxtools.valgrind.launch.helgrind">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.linuxtools.profiling.launch.launchProvider">
+      <provider
+            default="false"
+            delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            id="org.eclipse.linuxtools.profiling.provider.valgrind.helgrind"
+            name="%LaunchConfiguration.name.0"
+            priority="3"
+            shortcut="org.eclipse.linuxtools.internal.valgrind.helgrind.HelgrindLaunchShortcut"
+            tabgroup="org.eclipse.linuxtools.internal.valgrind.helgrind.HelgrindLaunchConfigurationTabGroup"
+            type="memory">
+      </provider>
+   </extension>   
 
 </plugin>
